Project1/Terraform/terabyteSGPr.tf
resource "aws_security_group" "priv_allow_http_ssh" {
  name        = "priv_allow_http_ssh"
  description = "Allow http & ssh inbound traffic"
  vpc_id      = aws_vpc.terabyte1.id

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

   ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "terabyte_private_sg"
  }
}
